--- a/wf7.Rmd
+++ b/wf7.Rmd
@@ -7,7 +7,7 @@ author:
 #    url: https://github.com/jjallaire
 #    affiliation: STRI
 #    affiliation_url: https://www.rstudio.com
-bibliography: assets/cite.bib
+#bibliography: assets/cite.bib
 ---
 
 ```{r setup, include=FALSE}
